--- a/tests-jasmine/tests.html
+++ b/tests-jasmine/tests.html
@@ -15,9 +15,12 @@
 
   <script src='utils/moneyTest.js' type="module"></script>
   <script src='data/cartTests.js' type="module"></script>
+  <script src="checkout/orderSummaryTests.js" type="module"></script>
+  
 
 </head>
 
 <body>
+  <div class="js-test-container"></div>
 </body>
 </html>
